RESOLVED FIXED63754
IndexedDB: Fix constants for webkitIDBTransaction.READ_WRITE/READ_ONLY
https://bugs.webkit.org/show_bug.cgi?id=63754
Summary IndexedDB: Fix constants for webkitIDBTransaction.READ_WRITE/READ_ONLY
Hans Wennborg
Reported 2011-06-30 14:50:42 PDT
IndexedDB: Fix constants for webkitIDBTransaction.READ_WRITE/READ_ONLY
Attachments
Patch (4.15 KB, patch)
2011-06-30 14:54 PDT, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2011-06-30 14:54:48 PDT
David Grogan
Comment 2 2011-06-30 16:37:18 PDT
Comment on attachment 99368 [details] Patch LGTM
WebKit Review Bot
Comment 3 2011-07-01 11:40:34 PDT
Comment on attachment 99368 [details] Patch Clearing flags on attachment: 99368 Committed r90252: <http://trac.webkit.org/changeset/90252>
WebKit Review Bot
Comment 4 2011-07-01 11:40:38 PDT
All reviewed patches have been landed. Closing bug.
Balazs Kelemen
Comment 5 2011-07-01 11:54:11 PDT
Note You need to log in before you can comment on or make changes to this bug.