2011-07-01  Hans Wennborg  <hans@chromium.org>

Reviewed by Tony Chang.

        IndexedDB: Fix constants for webkitIDBTransaction.READ_WRITE/READ_ONLY
        https://bugs.webkit.org/show_bug.cgi?id=63754

        Update layout tests to use the right values for
        webkitIDBTransaction.READ_WRITE/READ_ONLY.

        * storage/indexeddb/constants-expected.txt:
        * storage/indexeddb/constants.html:
2011-07-01  Hans Wennborg  <hans@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB: Fix constants for webkitIDBTransaction.READ_WRITE/READ_ONLY
        https://bugs.webkit.org/show_bug.cgi?id=63754

        Fix values for the webkitIDBTransaction.READ_WRITE/READ_ONLY
        constants. Douglas Stockwell pointed out that these were reverse
        of what the spec says.

        * storage/IDBTransaction.h:
        * storage/IDBTransaction.idl:

Canonical link: https://commits.webkit.org/79522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90252 268f45cc-cd09-0410-ab3c-d52691b4dbfc